# nostr-sdk-js

./: .gitignore  .npmignore  CHANGELOG.md  Cargo.toml  README.md  justfile  package.json  rust-toolchain.toml
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
contrib/scripts/: check-crate.sh
examples/: nostr-connect.js
src/: connect.rs  policy.rs
src/protocol/event/: builder.rs  kind.rs
src/protocol/event/tag/: mod.rs
src/protocol/nips/: nip98.rs
src/relay/: mod.rs
