[package]
name = "nostr-sdk-js"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
nostr-connect = "0.40"
nostr-sdk = { version = "0.40", default-features = false, features = ["all-nips", "indexeddb"] }
nwc = "0.40"
tracing = "0.1"
tracing-subscriber = "0.3"
wasm-bindgen = { version = "0.2", features = ["std"] }
wasm-bindgen-futures = "0.4"

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }
