[package]
name = "nostr-sdk-js"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
nostr-connect = { git = "https://github.com/rust-nostr/nostr", rev = "ce2ba11ab4ed94d2ac9f5eb16f0340a76ae12d54" }
nostr-sdk = { git = "https://github.com/rust-nostr/nostr", rev = "ce2ba11ab4ed94d2ac9f5eb16f0340a76ae12d54", default-features = false, features = ["all-nips", "indexeddb"] }
nwc = { git = "https://github.com/rust-nostr/nostr", rev = "ce2ba11ab4ed94d2ac9f5eb16f0340a76ae12d54" }
tracing = "0.1"
tracing-subscriber = "0.3"
wasm-bindgen = { version = "0.2", features = ["std"] }
wasm-bindgen-futures = "0.4"

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }
