[package]
name = "nostr-sdk-js"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
nostr-connect = "0.42.0"
nostr-sdk = { version = "0.42.0", default-features = false, features = ["all-nips", "indexeddb"] }
nwc = "0.42.0"
tracing = "0.1"
tracing-subscriber = "0.3"
# Pin wasm-bindgen to 0.2.95 for now, fo avoid to had to manually add constructors to records (structs with public fields)
# https://github.com/rustwasm/wasm-bindgen/pull/4282
wasm-bindgen = { version = "=0.2.95", features = ["std"] }
wasm-bindgen-futures = "0.4"

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }
